sanity removed, ssl added

--- a/nginx/conf/bearcountry.conf
+++ b/nginx/conf/bearcountry.conf
@@ -1,7 +1,7 @@
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  ud-p2 up-p2.local.lan;
+    listen       8088;
+    listen  [::]:8088;
+    server_name  docker.bearcountrypublishing.com;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
