--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,22 @@
 version: '3.8'
 services:
+  
   nginx:
     build:
       context: ./nginx
     volumes:
       - ./nginx/data:/usr/share/nginx/html
-    ports:
-      - '80:80'
-
+  
   next:
     build:
       context: ./next
-    
+  
+  ssl-proxy:
+    build:
+      context: ./ssl-proxy
+    ports:
+    - '80:80'
+    - '443:443'    
+
+
 
