--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -3,3 +3,5 @@ FROM nginx:stable-alpine
 COPY ./conf/nginx.conf /etc/nginx/nginx.conf
 COPY ./conf/bearcountry.conf /etc/nginx/conf.d/
 
+EXPOSE 8088
+
