added: proxy cache

--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -9,7 +9,6 @@ events {
     worker_connections  1024;
 }
 
-
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
@@ -22,10 +21,12 @@ http {
 
     sendfile        on;
     #tcp_nopush     on;
-
     keepalive_timeout  65;
-
     gzip  on;
+
+    proxy_cache_path    /data/nginx/cache   levels=1:2    keys_zone=STATIC:10m
+                                            inactive=24h  max_size=100m;
+
 
     include /etc/nginx/conf.d/*.conf;
 }
