--- a/nginx/conf/bearcountry.conf
+++ b/nginx/conf/bearcountry.conf
@@ -5,12 +5,17 @@ server {
 
     #access_log  /var/log/nginx/host.access.log  main;
 
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header        Host $host;
+    proxy_set_header        X-Real-IP $remote_addr;
+    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_buffering         on;
+    proxy_cache             STATIC;
+    proxy_cache_valid       200  1d;
+    proxy_cache_use_stale   error timeout invalid_header updating
+                            http_500 http_502 http_503 http_504;
 
     location / {
-        proxy_pass  http://next:3000;
+        proxy_pass      http://next:3000;
     }
 
     error_page  404              /404.html;
