--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,19 +4,17 @@ services:
   nginx:
     build:
       context: ./nginx
-    volumes:
-      - ./nginx/data:/usr/share/nginx/html
+    restart: always
   
   next:
     build:
       context: ./next
-  
+    restart: always
+
   ssl-proxy:
     build:
       context: ./ssl-proxy
+    restart: always
     ports:
-    - '80:80'
-    - '443:443'    
-
-
-
+      - '80:80'
+      - '443:4430'    
